<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">MUSAR</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_contactus">Contact Us</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="save_file">save</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="setCacheSummary">Set the maximum size of loaded youtube videos</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>YouTube</item>
         <item>Calls</item>
        <item>Most Used Apps</item>
        <item>Least Used Apps</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/youtube</item>
        <item>@drawable/missedcall</item>
        <item>@drawable/most</item>
        <item>@drawable/least</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Afghanistan +93</item>
        <item>  Albania +355</item>
        <item>Algeria +213</item>
        <item>Andorra +376</item>
        <item>Angola +244</item>
        <item>Argentina +54</item>
        <item>Armenia +374</item>
        <item>Australia +61</item>
        <item>Austria +43</item>
        <item>Azerbaigan +994</item>
        <item>Bahrain +973</item>
        <item>Bangladesh +880</item>
        <item>Belarus +375</item>
        <item>Belgium +32</item>
        <item>Bolivia +591</item>
        <item>Bosnia +387</item>
        <item>Brazil +55</item>
        <item>Bulgaria +359</item>
        <item>Cameroon +237</item>
        <item>Canada +1</item>
        <item>Chad +235</item>
        <item>Chile +56</item>
        <item>China +86</item>
        <item>Colombia +57</item>
        <item>Congo +242</item>
        <item>Costa Rica +506</item>
        <item>Croatia +385</item>
        <item>Cuba +53</item>
        <item>Cyprus +357</item>
        <item>Czech Republic +420</item>
        <item>Denmark +45</item>
        <item>Ecuador +593</item>
        <item>Egypt +2</item>
        <item>El Salvador +503</item>
        <item>Ethiopia +251</item>
        <item>Fiji +679</item>
        <item>Finland +358</item>
        <item>France +33</item>
        <item>Gabon +241</item>
        <item>Georgia +995</item>
        <item>Germany +49</item>
        <item>Ghana +233</item>
        <item>Gibraltar +350</item>
        <item>Greece +30</item>
        <item>Greenland +299</item>
        <item>Herzegovina +387</item>
        <item>Hong Kong +852</item>
        <item>Hungary +36</item>
        <item>Iceland +354</item>
        <item>India +91</item>
        <item>Indonesia +62</item>
        <item>Iran +98</item>
        <item>Iraq +964</item>
        <item>Ireland +353</item>
        <item>Italy +36</item>
        <item>Ivory Coast +225</item>
        <item>Japan +81</item>
        <item>Jordan +962</item>
        <item>Kazakhstan +7</item>
        <item>Kenya +254</item>
        <item>Korea +85</item>
        <item>Kuwait +965</item>
        <item>Laos +856</item>
        <item>Latvia +371</item>
        <item>Lebanon +961</item>
        <item>Liberia +231</item>
        <item>Libya +218</item>
        <item>Liechtenstein +41</item>
        <item>Lithuania +370</item>
        <item>Luxembourg +352</item>
        <item>Malaysia +60</item>
        <item>Maldives +960</item>
        <item>Mali +223</item>
        <item>Mauritius +230</item>
        <item>Malta +356</item>
        <item>Mexico +52</item>
        <item>Moldova +373</item>
        <item>Monaco +377</item>
        <item>Mongolia +976</item>
        <item>Morocco +212</item>
        <item>Mozambique +258</item>
        <item>Myanmar +95</item>
        <item>Namibia +264</item>
        <item>Netherlands +31</item>
        <item>New Caledonia +687</item>
        <item>Nepal +977</item>
        <item>New Zealand +64</item>
        <item>Nigeria +234</item>
        <item>North Korea +850</item>
        <item>Norway +47</item>
        <item>Oman +968</item>
        <item>Pakistan +92</item>
        <item>Panama +507</item>
        <item>Paraguay +595</item>
        <item>Peru +51</item>
        <item>Philippines +63</item>
        <item>Poland +48</item>
        <item>Portugal +351</item>
        <item>Qatar +974</item>
        <item>Romania +40</item>
        <item>Russia +70</item>
        <item>Rwanda +250</item>
        <item>Saudi Arabia +966</item>
        <item>Senegal +221</item>
        <item>Serbia +381</item>
        <item>Seychelles +248</item>
        <item>Sierra Leone +232</item>
        <item>Singapore +65</item>
        <item>Slovakia +421</item>
        <item>Somalia +252</item>
        <item>South Africa +27</item>
        <item>Spain +34</item>
        <item>Sri Lanka +94</item>
        <item>Sudan +249</item>
        <item>Sweden +46</item>
        <item>Switzerland +41</item>
        <item>Syria +963</item>
        <item>Taiwan +886</item>
        <item>Tanzania +255</item>
        <item>Thailand +66</item>
        <item>Tunisia +216</item>
        <item>Turkey +90</item>
        <item>Uganda +256</item>
        <item>Ukraine +7</item>
        <item>United Arab Emirates +971</item>
        <item>United Kingdom +44</item>
        <item>Uruguay +598</item>
        <item>USA +1</item>
        <item>Uzbekistan +7</item>
        <item>Vatican City St. +39</item>
        <item>Venezuela +58</item>
        <item>Vietnam +84</item>
        <item>Yemen +967</item>
        <item>Yugoslavia +38</item>
        <item>Zaire +243</item>
        <item>Zambia +260</item>
        <item>Zimbabwe +263 </item>
    </string-array>

    <string name="timerVal">00:00:00</string>
    <string name="RequestString">Please enter your phone number</string>
    <string name="Next">Next</string>
    <string name="Announce1">A security code will be sent to your mobile shortly ,</string>
    <string name="Announce2">"Please enter it to confirm your identity before 5 minutes"</string>
    <string name="list_name">Menu</string>
</resources>